<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="110dp"
    android:background="@android:color/white"
    android:padding="@dimen/widget_margin"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/appwidget_text"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:maxLines="2"
        android:ellipsize="end"
        />

    <Button
        android:id="@+id/widget_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/exo_controls_play"
        android:layout_centerInParent="true"
        android:background="@android:color/darker_gray"
        android:tint="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/widget_button_label"
        android:contentDescription="@string/widget_play_button" />

</RelativeLayout>